Fixed overflow handling

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,10 @@
 body {
   font-family: 'Raleway', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  overflow: hidden;
 }
 
 .ranking{
@@ -178,6 +183,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 #countdown.activate .count {
   position: absolute;
